# Object-Detection-Using-YOLO-and-C

./: .gitignore  CMakeLists.txt  README.md  Untitled-1.cpp  check_opencv_dlls.bat
include/: object_detector.hpp
src/: main.cpp  object_detector.cpp
